# tmdb_data_eda

./: .gitignore  README.md  netflix_data_project.ipynb  pyproject.toml  revenue_prediction.py  tmbdb_data_eda.ipynb
