[project]
name = "tmdb-data-eda"
version = "0.1.0"
description = "Exploratory Data Analysis for TMDB dataset"
authors = [
    { name = "Matthias Elbaz", email = "matthias.elbaz91@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "jupyter",
    "scipy>=1.16.0",
    "statsmodels>=0.14.5",
]

[tool.setuptools]
package-dir = {"" = "."} 
