[project]
name = "tmdb-data-eda"
version = "0.1.0"
description = "Exploratory Data Analysis for TMDB dataset"
authors = [
    { name = "Matthias Elbaz", email = "matthias.elbaz91@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "jupyter",
    "scipy>=1.16.0",
    "statsmodels>=0.14.5",
    "scikit-learn>=1.7.1",
    "plotly>=6.2.0",
    "superlinked>=31.2.3",
]

[tool.setuptools]
package-dir = {"" = "."} 
